--- a/TEHJR/TEHJR.csproj
+++ b/TEHJR/TEHJR.csproj
@@ -133,13 +133,19 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\bear-trees.svg" />
+    <Content Include="Images\hammer.svg" />
+    <Content Include="Images\hill-tree.svg" />
+    <Content Include="Images\my-face.svg" />
     <Content Include="Images\Octicons-mark-github.svg" />
+    <Content Include="Images\rolling.svg" />
     <Content Include="Images\rowhouse_M.jpg" />
     <Content Include="Images\rowhouse_S.jpg" />
     <Content Include="Images\rowhouse_L.jpg" />
     <Content Include="Images\Twitter_bird_logo.svg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\FTP.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\getPartialViews.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
